Implemented basic dicom receiver

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -80,6 +80,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ./data:/data
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -210,6 +211,18 @@ services:
       - bash
       - -c
       - airflow
+  dicom-receiver:
+    build: ./dicom_receiver
+    restart: unless-stopped
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+        condition: service_completed_successfully
+    volumes:
+        - ./data:/data
+        - ./dicom_receiver/config.json:/config.json
+    ports:
+        - "104:104"
 
 volumes:
   postgres-db-volume:
